k8s/ipfs_cluster.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ipfs-cluster
  name: ipfs-cluster
spec:
  ports:
  - name: swarm
    port: 4001
    targetPort: swarm
  - name: cluster-swarm
    port: 9096
    targetPort: cluster-swarm
  selector:
    app: ipfs-cluster
  type: LoadBalancer
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ipfs-cluster
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ipfs-cluster
  serviceName: ipfs-cluster
  template:
    metadata:
      labels:
        app: ipfs-cluster
    spec:
      containers:
      - env:
        - name: IPFS_FD_MAX
          value: "4096"
        image: ipfs/go-ipfs:cluster-k8s
        imagePullPolicy: IfNotPresent
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 15
          tcpSocket:
            port: swarm
          timeoutSeconds: 5
        name: ipfs
        ports:
        - containerPort: 4001
          name: swarm
          protocol: TCP
        - containerPort: 4002
          name: swarm-udp
          protocol: UDP
        - containerPort: 5001
          name: api
          protocol: TCP
        - containerPort: 8081
          name: ws
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /data/ipfs
          name: ipfs-storage
        - mountPath: /custom
          name: configure-script
      - command:
        - sh
        - /custom/cluster-entrypoint.sh
        image: ipfs/ipfs-cluster:latest
        livenessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          tcpSocket:
            port: cluster-swarm
          timeoutSeconds: 5
        name: ipfs-cluster
        ports:
        - containerPort: 9094
          name: api-http
          protocol: TCP
        - containerPort: 9095
          name: proxy-http
          protocol: TCP
        - containerPort: 9096
          name: cluster-swarm
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /data/ipfs-cluster
          name: cluster-storage
        - mountPath: /custom
          name: configure-script
      volumes:
      - configMap:
          name: ipfs-cluster-set-bootstrap-conf
        name: configure-script
  volumeClaimTemplates:
  - metadata:
      name: cluster-storage
    spec:
      accessModes:
      - ReadWriteOnce
#      persistentVolumeReclaimPolicy: Retain
      resources:
        requests:
          storage: 5Gi
      storageClassName: standard
  - metadata:
      name: ipfs-storage
    spec:
      accessModes:
      - ReadWriteOnce
#      persistentVolumeReclaimPolicy: Retain
      resources:
        requests:
          storage: 200Gi
      storageClassName: standard
