k8s/ipfs_cluster_ingress_base.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ipfs-cluster
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: ipfs-cluster
          servicePort: api-http
        path: /
